Added filtering feeds by collection ID
